--- a/localsearches.html
+++ b/localsearches.html
@@ -6,9 +6,8 @@
     <meta name="description" content="Learn how to optimize your Facebook page for local searches and attract more customers in your area with these simple tips!">
     <meta name="keywords" content="Facebook Page Optimization, Local SEO, Facebook SEO, Social Media Marketing, Local Business Marketing">
     <meta name="author" content="Jaja Victor Barisuka">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles.css">
     <title>Optimizing Your Facebook Page for Local Searches | Jaja Victor Barisuka Blog</title>
-    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     
@@ -17,9 +16,9 @@
       <span class="prothought">Prothought</span><span class="insight">Insight</span>
     </div>
     <nav class="nav">
-      <a href="index.html">HOME</a>
-      <a href="privacypolicy.html">PRIVACY POLICY</a>
-      <a href="about.html">ABOUT</a>
+      <a href="./index.html">HOME</a>
+      <a href="./privacypolicy.html">PRIVACY POLICY</a>
+      <a href="./about.html">ABOUT</a>
     </nav>
   </header>
     
@@ -27,7 +26,7 @@
     <div class="container">
         <h1>Optimizing Your Facebook Page for Local Searches</h1>
         <p class="author-date">By Jaja Victor Barisuka | Published on January 15, 2025</p>
-        <img src="1.jpg" alt="Facebook local searches">
+        <img src="./1.jpg" alt="Facebook local searches">
               <p>Hey there, business owner! Struggling to get more local customers to check out your business on Facebook? Well, you're in the right place! Let me walk you through how to turn your Facebook page into a local search magnet. Trust me, it's easier than it sounds!</p>
 
         <h2>1. Use Your Real Business Name</h2>
@@ -77,7 +76,7 @@
 
 <fieldset>
     <legend>You might also like</legend>
- <div class="card-title"><a href="facebookmarketing.html">TOP FACEBOOK MARKETING STRATEGIES FOR SMALL BUSINESSES IN 2025</a></div>
+ <div class="card-title"><a href="./facebookmarketing.html">TOP FACEBOOK MARKETING STRATEGIES FOR SMALL BUSINESSES IN 2025</a></div>
 </fieldset>
     </div>
 
@@ -86,7 +85,7 @@
       <span class="prothought">Prothought</span><span class="insight">Insight</span>
     </div>
     <p id="text">...Insight From a Professional Point of View</p>
-    <p id="terms">     <a href="termsandconditions.html">TERMS AND CONDITIONS</a></p>
+    <p id="terms">     <a href="./termsandconditions.html">TERMS AND CONDITIONS</a></p>
   </footer>
 </body>
 </html>
