--- a/youtubeaudience.html
+++ b/youtubeaudience.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Discover the top strategies to grow your YouTube channel and turn your content into a subscriber magnet!">
     <meta name="keywords" content="YouTube Growth Tips, Grow YouTube Channel, YouTube SEO, YouTube Marketing, Increase YouTube Subscribers">
     <meta name="author" content="Jaja Victor Barisuka">
