--- a/termsandconditions.html
+++ b/termsandconditions.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <meta name="description" content="Read our Terms and Conditions to understand the rules and guidelines for using our blog site.">
     <meta name="keywords" content="Terms and Conditions, User Agreement, Website Use Policy, Legal Notice">
     <meta name="author" content="Jaja Victor Barisuka">
