--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Read our Privacy Policy to learn how we collect, use, and protect your personal information on our blog.">
     <meta name="keywords" content="Privacy Policy, Data Protection, Personal Information, Cookies, User Data Security">
     <meta name="author" content="Jaja Victor Barisuka">
