--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Explore trending tech news, social media marketing tips, SEO strategies, and lifestyle insights on our blog. Stay informed and grow with us.">
     <meta name="keywords" content="Tech News, Social Media Marketing, SEO Optimization, Business, Entertainment, Sports, Politics, Lifestyle, Fashion, Content Writing">
     <meta name="author" content="Jaja Victor Barisuka">
