--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
    
     <nav class="nav">
       <a class="current" href="./index.html">HOME</a>
-      <a href="./privacypolicy.html">PRIVACY POLICY</a>
-      <a href="./about.html">ABOUT</a>
+      <a class="current" href="./privacypolicy.html">PRIVACY POLICY</a>
+      <a class="current" href="./about.html">ABOUT</a>
     </nav>
 
   </header>
