--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
 
             <h2>Who I Am</h2>
             <img src="./Jaja.jpg" alt="Image of Jaja Victor Barisuka">
-            <p>Founded by <strong>Jaja Victor Barisuka</strong>, this blog is dedicated to delivering high-quality, informative, and engaging content. From tech innovations to social media growth hacks, my mission is to empower individuals and businesses to thrive in the digital world.</p>
+            <p>Founded and created by <strong>Jaja Victor Barisuka</strong>, this blog is dedicated to delivering high-quality, informative, and engaging content. From tech innovations to social media growth hacks, my mission is to empower individuals and businesses to thrive in the digital world.</p>
 
             <h2>What I Cover</h2>
             <ul>
@@ -40,7 +40,7 @@
             </ul>
 
             <h2>Mission</h2>
-       <p>My mission is to inform, educate, and inspire my audience by providing valuable insights and actionable tips in the tech, social media marketing, content writing, SEO tips and lots more. Whether you're a content creator, blogger, a tech enthusiast, or a digital marketer, we've got something for you.</p>
+       <p>My mission is to inform, educate, and inspire my audience by providing valuable insights and actionable tips in the tech, social media marketing, content writing, SEO tips and front-end web development which are all skills I have learnt and developed over the years. As a professional in this field, Whether you're a content creator, blogger, a tech enthusiast, or a digital marketer, I've got something for you.</p>
 
             <h2>Future Plans</h2>
             <p>I'm not stopping here! I will expand into video content through my upcoming <strong>YouTube channel</strong> to provide more engaging and interactive content. Stay tuned!</p>
