--- a/localsearches.html
+++ b/localsearches.html
@@ -79,14 +79,18 @@
  <div class="card-title"><a href="./facebookmarketing.html">TOP FACEBOOK MARKETING STRATEGIES FOR SMALL BUSINESSES IN 2025</a></div>
 </fieldset>
     </div>
+</div>
 
-<footer class="footer">
+    <footer class="footer">
     <div class="logo">
-      <span class="prothought">Prothought</span><span class="insight">Insight</span>
+      <p>© 2025 <span class="prothought">Prothought</span><span class="insight">Insight</span></p>
     </div>
-    <p id="text">...Insight From a Professional Point of View</p>
+    <p id="text">"Stay Ahead With Thoughtful Insights"</p>
     <p id="terms">     <a href="./termsandconditions.html">TERMS AND CONDITIONS</a></p>
   </footer>
+    
+
+
 </body>
 </html>
 
