--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -77,6 +77,7 @@
             <p>Email: <a href="mailto: victorjaja500@gmail.com.com"> victorjaja500@gmail.com</a></p>
 
       </div>
+</div>
     
         <footer class="footer">
     <div class="logo">
