--- a/termsandconditions.html
+++ b/termsandconditions.html
@@ -73,7 +73,7 @@
             <p>Email: <a href="mailto: victorjaja500@gmail.com"> victorjaja500@gmail.com</a></p>
      
       </div>
-    
+    </div>
   
         <footer class="footer">
     <div class="logo">
