--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
     </div>
 </div>
 
- <footer class="footer">
+    <footer class="footer">
     <div class="logo">
-      <span class="prothought">Prothought</span><span class="insight">Insight</span>
+      <p>© 2025 <span class="prothought">Prothought</span><span class="insight">Insight</span></p>
     </div>
-    <p id="text">...Insight From a Professional Point of View</p>
+    <p id="text">"Stay Ahead With Thoughtful Insights"</p>
     <p id="terms">     <a href="./termsandconditions.html">TERMS AND CONDITIONS</a></p>
   </footer>
     
