--- a/about.html
+++ b/about.html
@@ -52,6 +52,13 @@
 </div>
 
 
+       <footer class="footer">
+    <div class="logo">
+      <p>© 2025 <span class="prothought">Prothought</span><span class="insight">Insight</span></p>
+    </div>
+    <p id="text">"Stay Ahead With Thoughtful Insights"</p>
+    <p id="terms">     <a href="./termsandconditions.html">TERMS AND CONDITIONS</a></p>
+  </footer>
     
     
   
