--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
       <header class="header">
     <div class="logo">
-      <span class="prothought">Prothought</span><span class="insight">Insight</span>
+      <span class="prothought">ProThought</span><span class="insight">Insight</span>
     </div>
    
     <nav class="nav">
@@ -62,9 +62,7 @@
 </div>
 
     <footer class="footer">
-    <div class="logo">
-      <p>© 2025 <span class="prothought">Prothought</span><span class="insight">Insight</span></p>
-    </div>
+      <p>© 2025 <span class="prothought">ProThought</span><span class="insight">Insight</span></p>
     <p id="text">"Stay Ahead With Thoughtful Insights"</p>
     <p id="terms">     <a href="./termsandconditions.html">TERMS AND CONDITIONS</a></p>
   </footer>
