--- a/youtubemarketing.html
+++ b/youtubemarketing.html
@@ -13,7 +13,7 @@
     
     <header class="header">
     <div class="logo">
-      <span class="prothought">ProThought</span><span class="Insight">Insight</span>
+      <span class="prothought">ProThought</span><span class="insight">Insight</span>
     </div>
     <nav class="nav">
       <a href="./index.html">HOME</a>
@@ -127,7 +127,7 @@
 </div>
     
     <footer class="footer">
-      <p>© 2025 <span class="prothought">ProThought</span><span class="Insight">Insight</span></p>
+      <p>© 2025 <span class="prothought">ProThought</span><span class="insight">Insight</span></p>
     <p id="text">"Stay Ahead With Thoughtful Insights"</p>
     <p id="terms">     <a href="./termsandconditions.html">TERMS AND CONDITIONS</a></p>
   </footer>
