--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -13,7 +13,7 @@
     
     <header class="header">
     <div class="logo">
-      <span class="prothought">ProThought</span><span class="Insight">Insight</span>
+      <span class="prothought">ProThought</span><span class="insight">Insight</span>
     </div>
     <nav class="nav">
       <a href="./index.html">HOME</a>
