--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     </div>
    
     <nav class="nav">
-      <a class="current" href="./index.html">HOME</a>
-      <a class="current" href="./privacypolicy.html">PRIVACY POLICY</a>
-      <a class="current" href="./about.html">ABOUT</a>
+      <a href="./index.html">HOME</a>
+      <a href="./privacypolicy.html">PRIVACY POLICY</a>
+      <a href="./about.html">ABOUT</a>
     </nav>
 
   </header>
