--- a/instagrammarketing.html
+++ b/instagrammarketing.html
@@ -26,7 +26,8 @@
         
         <h1>Top Instagram Marketing Strategies for Your Small Business in 2025</h1>
         <p class="author-date">By Jaja Victor Barisuka | Published on January 19, 2025</p>
-        <img src="./21.jpeg" alt="Instagram marketing">
+
+       <div class="image><img src="./21.jpeg" alt="Instagram marketing"></div>
 
         <p>Instagram is still one of the hottest platforms for businesses in 2025. But let’s be real—just posting cute pictures won’t magically bring in sales. You need a solid game plan. So, let’s break down the best Instagram marketing strategies to help your small business thrive this year!</p>
 
