--- a/localsearches.html
+++ b/localsearches.html
@@ -86,6 +86,8 @@
             <p>[Insert an image of a business owner using Facebook on a laptop, with a visible storefront in the background.]</p>
         </section>
 
+        <p>Ready to take your business to the next level? Let’s make it happen! <a href="mailto: victorjaja500@gmail.com">Contact me here</a> for more strategies.</p>
+
         <p>Stay Ahead With Thoughtful Insights!</p>
 
 
