--- a/instagramprofile.html
+++ b/instagramprofile.html
@@ -94,7 +94,7 @@
         </section>
 
         <section>
-            <h2>Conclusion</h2>
+            <h2>Final Thoughts</h2>
             <p>Optimizing your Instagram profile doesn’t have to be complicated. By following these steps, you’ll make it easier for people to find and connect with your business in 2025. So why wait? Start today and watch your Instagram profile turn into a powerful tool for growth.</p>
         </section>
 
