--- a/youtubeaudience.html
+++ b/youtubeaudience.html
@@ -94,7 +94,7 @@
         </section>
 
         <section>
-            <h2>Conclusion</h2>
+            <h2>Final Thoughts</h2>
             <p>Growing your YouTube channel doesn’t have to be overwhelming. With these strategies, a bit of creativity, and consistency, you’ll see progress over time. Remember, the journey is just as important as the destination, so enjoy the process!</p>
             <p>Start implementing these tips today and watch your channel thrive in 2025. You’ve got this!</p>
         </section>
