--- a/youtubemarketing.html
+++ b/youtubemarketing.html
@@ -82,7 +82,7 @@
         </section>
 
         <section>
-            <h2>Conclusion</h2>
+            <h2>Final Thoughts</h2>
             <p>There you have it! These strategies are simple, effective, and perfect for small businesses looking to grow on YouTube in 2025. With a bit of creativity and consistency, your brand can reach a wider audience and see real results.</p>
             <p>So, grab your camera, start filming, and let YouTube help take your business to the next level!</p>
         </section>
