--- a/instagrammarketing.html
+++ b/instagrammarketing.html
@@ -108,7 +108,7 @@
 
         <p>Need help crafting the perfect Instagram strategy? Let’s connect—<a href="mailto: victorjaja500@gmail.com">click here to get in touch</a>!</p>
 
-        <p>Keep creating and keep growing!</p>
+        <p>Stay Ahead With Thoughtful Insights!</p>
 
      
 <fieldset>
