--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -27,7 +27,8 @@
             <h1>Privacy Policy</h1>
             <p>Effective Date: January 14, 2025</p>
 
-            <p>Welcome to <strong>Prothoughtinsight</strong>. I value your privacy and am committed to protecting your personal information. This Privacy Policy explains how I collect, use, and safeguard your data when you visit My website.</p>
+            <p>Welcome to <strong>Prothoughtinsight</strong>. I value your privacy and am committed to protecting your personal information. This Privacy Policy explains how I collect, use, and safeguard your data when you visit My website.</p><br>
+
 
             <h2>1. Information I Collect</h2>
             <p>I collect different types of information to provide and improve our services, including:</p>
@@ -35,7 +36,8 @@
                 <li><strong>Personal Information:</strong> Name, email address, and other contact details when you subscribe or contact us.</li>
                 <li><strong>Usage Data:</strong> Information about how you interact with my site (e.g., pages visited, time spent).</li>
                 <li><strong>Cookies & Tracking:</strong> I use cookies to enhance your experience and analyze site traffic.</li>
-            </ul>
+            </ul><br>
+
 
             <h2>2. How I Use Your Information</h2>
             <p>Your information is used to:</p>
@@ -44,10 +46,12 @@
                 <li>Improve user experience and website performance.</li>
                 <li>Send newsletters, updates, or promotional content (with your consent).</li>
                 <li>Monitor website usage and analyze trends.</li>
-            </ul>
+            </ul><br>
+
 
             <h2>3. Cookies and Tracking Technologies</h2>
-            <p>I use cookies to personalize your experience and analyze traffic. You can control cookie preferences through your browser settings. Disabling cookies may affect certain site features.</p>
+            <p>I use cookies to personalize your experience and analyze traffic. You can control cookie preferences through your browser settings. Disabling cookies may affect certain site features.</p><br>
+
 
             <h2>4. Data Sharing and Disclosure</h2>
             <p>I do not sell, trade, or rent your personal information. I may share data with trusted third-party services to operate the website, such as:</p>
@@ -55,26 +59,33 @@
                 <li>Analytics tools (e.g., Google Analytics)</li>
                 <li>Email marketing services (e.g., Mailchimp)</li>
                 <li>Ad networks (if applicable)</li>
-            </ul>
+            </ul><br>
+
 
             <h2>5. Data Security</h2>
-            <p>I implement security measures to protect your data from unauthorized access, alteration, or disclosure. However, no method of online transmission is 100% secure.</p>
+            <p>I implement security measures to protect your data from unauthorized access, alteration, or disclosure. However, no method of online transmission is 100% secure.</p><br>
+
 
             <h2>6. Third-Party Links</h2>
-            <p>My blog may contain links to third-party websites. My are not responsible for the privacy practices of these external sites. We encourage you to read their privacy policies.</p>
+            <p>My blog may contain links to third-party websites. My are not responsible for the privacy practices of these external sites. We encourage you to read their privacy policies.</p><br>
+
 
             <h2>7. Children's Privacy</h2>
-            <p>My website is not intended for individuals under the age of 13. We do not knowingly collect personal information from children.</p>
+            <p>My website is not intended for individuals under the age of 13. We do not knowingly collect personal information from children.</p><br>
+
 
             <h2>8. Your Privacy Rights</h2>
-            <p>You can opt-out of receiving marketing communications or request the deletion of your personal data by contacting me at <a href="mailto: victorjaja500@gmail.com"> victorjaja500@gmail.com</a>.</p>
+            <p>You can opt-out of receiving marketing communications or request the deletion of your personal data by contacting me at <a href="mailto: victorjaja500@gmail.com"> victorjaja500@gmail.com</a>.</p><br>
+
 
             <h2>9. Changes to This Privacy Policy</h2>
-            <p>I may update this Privacy Policy from time to time. Changes will be posted on this page with an updated effective date.</p>
+            <p>I may update this Privacy Policy from time to time. Changes will be posted on this page with an updated effective date.</p><br>
+
 
             <h2>10. Contact </h2>
             <p>If you have any questions about this Privacy Policy, please contact me at:</p>
-            <p>Email: <a href="mailto: victorjaja500@gmail.com.com"> victorjaja500@gmail.com</a></p>
+            <p>Email: <a href="mailto: victorjaja500@gmail.com.com"> victorjaja500@gmail.com</a></p><br>
+
 
       </div>
     
