--- a/instagramprofile.html
+++ b/instagramprofile.html
@@ -26,82 +26,96 @@
         
         <h1>How to Optimize Your Instagram Profile for Business in 2025</h1>
         <p class="author-date">By Jaja Victor Barisuka | Published on January 17, 2025</p>
-        <img src="./10.jpeg" alt="Instagram Business">
+        <img src="./10.jpeg" alt="Instagram Business"><br>
+
 
   <section>
             <p>Hey, amazing entrepreneur! Is your Instagram profile ready to bring in business this year? Whether you're launching a brand or scaling up, optimizing your Instagram profile can do wonders for your growth.</p>
             <p>Here’s how to fine-tune your profile to attract more followers, boost engagement, and drive results. Let’s get started!</p>
-        </section>
+        </section><br>
+
 
         <section>
             <h2>1. Switch to a Business Account</h2>
             <p>Make sure you’re using an Instagram Business Account. It opens up tools like analytics, ads, and professional features that can elevate your profile.</p>
             <p><em>Example:</em> A handmade jewelry store moves to a business account and starts using insights to track the best times to post.</p>
-        </section>
+        </section><br>
+
 
         <section>
             <h2>2. Pick a Clear and Professional Profile Picture</h2>
             <p>Your profile photo is the face of your brand. Use your logo or a clear image that represents your business to make a lasting impression.</p>
             <p><em>Example:</em> A pet grooming service uses a cheerful logo featuring a cartoon dog and cat to stand out.</p>
-        </section>
+        </section><br>
+
 
         <section>
             <h2>3. Write an Engaging Bio</h2>
             <p>Your bio should tell people exactly what you offer and why they should follow you. Sprinkle in your unique personality to keep it interesting!</p>
             <p><em>Example:</em> A digital marketer’s bio says, “Helping small businesses master social media 🚀 DM me for consultations!”</p>
-        </section>
+        </section><br>
+
 
         <section>
             <h2>4. Add a Useful Link</h2>
             <p>Instagram only gives you one clickable link in your bio, so make it count. Use it to drive traffic to your website, store, or a multi-link page.</p>
             <p><em>Example:</em> A personal trainer links to a landing page where clients can book sessions, read reviews, and download a free guide.</p>
-        </section>
+        </section><br>
+
 
         <section>
             <h2>5. Utilize Story Highlights</h2>
             <p>Story highlights let you showcase important content permanently on your profile. Use them to highlight products, services, or customer testimonials.</p>
             <p><em>Example:</em> A travel agency creates highlights for destinations, travel tips, and happy clients’ trips.</p>
-        </section>
+        </section><br>
+
 
         <section>
             <h2>6. Optimize Your Username and Handle</h2>
             <p>Keep your Instagram handle simple, easy to remember, and related to your business. Avoid unnecessary numbers or symbols.</p>
             <p><em>Example:</em> A freelance designer chooses @CreativeByEmma instead of something generic like @Emma123.</p>
-        </section>
+        </section><br>
+
 
         <section>
             <h2>7. Create a Consistent Visual Style</h2>
             <p>Keep your feed visually cohesive by using the same colors, filters, and overall aesthetic. This helps your profile stand out and looks professional.</p>
             <p><em>Example:</em> A skincare brand uses soft pastels and close-up shots of glowing skin for a clean, fresh look.</p>
-        </section>
+        </section><br>
+
 
         <section>
             <h2>8. Use Keywords in Your Bio</h2>
             <p>Add relevant keywords to your bio to make your profile easier to discover. Focus on words your target audience might search for.</p>
             <p><em>Example:</em> A photographer includes “portraits, weddings, lifestyle” in their bio for better visibility.</p>
-        </section>
+        </section><br>
+
 
         <section>
             <h2>9. Include a Call-to-Action</h2>
             <p>Encourage visitors to take action with a strong CTA. Tell them what to do next, like clicking your link or sending a message.</p>
             <p><em>Example:</em> A bakery writes, “Order your favorite cakes now—click below!” with a link to their menu.</p>
-        </section>
+        </section><br>
+
 
         <section>
             <h2>10. Monitor and Adjust</h2>
             <p>Use Instagram Insights to track how your profile is performing. Learn what’s working, experiment with new ideas, and keep improving.</p>
             <p><em>Example:</em> A clothing brand realizes posts featuring people wearing their outfits get more likes, so they shift their strategy to showcase customers more often.</p>
-        </section>
+        </section><br>
+
 
         <section>
             <h2>Final Thoughts</h2>
             <p>Optimizing your Instagram profile doesn’t have to be complicated. By following these steps, you’ll make it easier for people to find and connect with your business in 2025. So why wait? Start today and watch your Instagram profile turn into a powerful tool for growth.</p>
-        </section>
+        </section><br>
+
 
         <section>
             <h3>Image Placeholder</h3>
             <p>[Insert an image showing a well-optimized Instagram profile on a smartphone.]</p>
-        </section>
+        </section><br>
+
 
         <p>Need help with your Instagram strategy? <a href="mailto: victorjaja500@gmail.com">contact me here</a>. Let’s make your brand unstoppable!</p>
 
